# Woodland_Chess

./: .env.example  .gitignore  MIGRATION_PLAN.md  README.md  TODO.md  pyproject.toml  railpack.json  railway.toml  requirements.txt  runpod plan.md  validate-runpod-setup.sh
.issues/: 0001-rework-using-django-htmx-tailwind.md  0002-player-pages.md  0003-users-should-be-able-to-save-games.md  0004-add-a-game-by-pasting-in-the-pgn.md  0005-add-in-browser-stockfish-support.md  0006-on-going-tournament-tracking.md  0007-need-to-be-able-to-add-users.md  0008-game-search-page-should-implement-the-ne.md  0015-add-analysis-worker-api.md
accounts/: admin.py  apps.py  backends.py  forms.py  middleware.py  models.py  tests.py  urls.py  views.py
analysis/: admin.py  apps.py  models.py  partial_urls.py  services.py  tests.py  urls.py  views.py
app/: config.py
config/: settings.py  urls.py
dashboard/: admin.py  apps.py  charts.py  forms.py  models.py  partial_urls.py  services.py  tests.py  urls.py  views.py
games/: admin.py  apps.py  board_builder.py  forms.py  models.py  partial_urls.py  services.py  stat_cards.py  tests.py  urls.py  views.py
ingest/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
openings/: admin.py  apps.py  charts.py  models.py  partial_urls.py  services.py  tests.py  urls.py  views.py
players/: admin.py  apps.py  models.py  partial_urls.py  tests.py  urls.py  views.py
search/: admin.py  apps.py  models.py  partial_urls.py  services.py  tests.py  urls.py  views.py
templates/: base.html
tests/: test_py39_annotation_compat.py
(+84 files in other folders)
