[project]
name = "wood-league-chess"
version = "2.0.0"
description = "Club chess analytics — Django + Tailwind + HTMX"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
  "django>=5.0",
  "psycopg2-binary",
  "gunicorn",
  "whitenoise",
  "python-decouple",
  "django-tailwind-cli",
  "django-htmx",
  "python-chess>=1.999",
  "plotly>=5.20.0",
  "pandas>=2.2.0",
  "anthropic",
  "sqlalchemy>=2.0.29",
  "psycopg[binary]>=3.2.0",
  "passlib[bcrypt]>=1.7.4",
  "pydantic-settings>=2.8.0",
  "requests>=2.32.2",
  "tqdm>=4.66.0",
  "runpod>=1.7.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "accounts*", "analysis*", "config*", "dashboard*", "games*", "ingest*", "openings*", "players*", "search*"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
